fix flow course